Large font vertical cutoff fix
-Line height on important text set to normal
-Removed resolved todo

--- a/src/svelteStyles/main.css
+++ b/src/svelteStyles/main.css
@@ -862,6 +862,7 @@ Text styles
   letter-spacing: -0.05rem;
   overflow: hidden;
   text-overflow: ellipsis;
+  line-height: normal;
 }
 
 .sub-text{
